--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,22 @@
 			android:name=".MainActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
+			
+		
+			
 		</activity>
 		<activity
 			android:name=".ActivityAddClass"
 			android:label="@string/title_activity_add_class"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		<activity
+			android:name=".Activity_add_student"
+			android:label="@string/title_activity_add_student"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
 	</application>
