--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,6 @@
 			android:name=".MainActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar">
-			
-		
-			
 		</activity>
 		<activity
 			android:name=".ActivityAddClass"
@@ -23,12 +20,18 @@
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
+				
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
 		<activity
 			android:name=".Activity_add_student"
 			android:label="@string/title_activity_add_student"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
+		<activity
+			android:name=".Attendance_Activity"
+			android:label="@string/title_activity_attendance"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
 	</application>
