--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.afollestad.material-dialogs:core:0.9.4.2'
+    compile 'io.realm:android-adapters:2.0.0'
     testCompile 'junit:junit:4.12'
 }
